<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.hertzfastlane.LoginActivity"
    android:background="#0d0f17">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView3"
        android:scaleType="fitXY"
        android:src="@drawable/login"
        android:adjustViewBounds="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="300dp"
                android:maxWidth="400dp"
                android:adjustViewBounds="true"
                android:id="@+id/imgLoginLogo"
                android:src="@drawable/logo_checkout_corrected_color"
                android:scaleType="fitStart"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/et_Username"
                android:hint="User Name"
                android:maxLines="1"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_marginBottom="18dp"
                android:background="#CC1f1f1f"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="18dp"
                android:fontFamily="sans-serif-thin"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="textPersonName"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textPassword"
                android:id="@+id/et_Password"
                android:hint="Password"
                android:maxLines="1"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_marginBottom="18dp"
                android:background="#CC1f1f1f"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="18dp"
                android:fontFamily="sans-serif-thin"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Login"
                android:id="@+id/b_Login"
                android:background="@drawable/button_border"
                android:textColor="#ffd100"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:textSize="18dp"
                android:fontFamily="sans-serif-thin"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />


        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

</RelativeLayout>
