<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_maps" android:title="@string/action_map_option" android:orderInCategory="100" app:showAsAction='never' />
    <item android:id="@+id/action_help" android:title="@string/action_help" android:orderInCategory="100" app:showAsAction='never' />
    <item android:id="@+id/Beacon" android:title="@string/beacon" android:orderInCategory="100" app:showAsAction='never' />
    <item android:id="@+id/Default" android:title="@string/test_default" android:orderInCategory="100" app:showAsAction='never' />

</menu>