<?xml version="1.0" encoding="utf-8"?>

<!-- this code was added -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- code above is for hamburger menu-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
...
                android:textIsSelectable="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Reservations"
                android:id="@+id/bMyReservation"
                android:padding="10dp"
                android:background="#1Affffff"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-thin"
                android:textSize="18dp"
                android:longClickable="false"
...
