...
                    android:fontFamily="sans-serif-thin"
                    android:textIsSelectable="false" />/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bSelectVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_border"
            android:fontFamily="sans-serif-condensed"
            android:text="Select Vehicle"
...
