<resources>
    <string name="app_name">Hertz FastLane</string>

    <string name="checkout_assistance_ph">
        800-654-5060
    </string>

    <string name="rental_edit_ph">
        800-654-4174
    </string>

    <string name="gpr_ph">
        888-999-4900
    </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map2">MapActivity2</string>
    <string name="action_map_option">Parking Lot Maps</string>
    <string name="action_help">Need Help?</string>
    <string name="test_default">Default?</string>

    <string name="beacon">Beacon</string>
    <string name="drawer_open">Open navigation drawer</string>  <!-- toggle action bar-->
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="Toast">Thank You For Using Hertz!</string>
    <string name="ReserveToast">Successfully updated reservation! Please proceed to the gate.</string>
    <string name="title_activity_testing_test_car_adapter">TestingTestCarAdapter</string>

</resources>
