//package com.example.hertzfastlane;
//
//import android.content.ComponentName;
//import android.support.test.InstrumentationRegistry;
//import android.support.test.espresso.action.ViewActions;
//import android.support.test.espresso.intent.rule.IntentsTestRule;
//
//import org.junit.Rule;
//import org.junit.Test;
//
//import static android.support.test.InstrumentationRegistry.getTargetContext;
//import static android.support.test.espresso.Espresso.onData;
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
//import static android.support.test.espresso.Espresso.pressBack;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.typeText;
//import static android.support.test.espresso.intent.Intents.intended;
//import static android.support.test.espresso.intent.matcher.IntentMatchers.hasComponent;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.anyOf;
//import static org.hamcrest.Matchers.instanceOf;
//import static org.hamcrest.core.Is.is;
//
///**
// * Created by stevenjoy on 3/13/17.
// */
//
//public class BeaconsBackButton {
//
//    @Rule
//    public IntentsTestRule<LoginActivity> nLoginRule =
//            new IntentsTestRule<LoginActivity>(LoginActivity.class);
//
//    @Test  // tests the Beacons class onBackPressed Method
//    public void testBeaconsButton() throws Exception {
//
//        onView(withId(R.id.et_Username)).perform(typeText("dpike15")).perform(ViewActions.closeSoftKeyboard());
//        onView(withId(R.id.et_Password)).perform(typeText("test")).perform(ViewActions.closeSoftKeyboard());
//        onView(withId(R.id.b_Login)).perform(click());
//
//        try { // activates menu actions bar
//            openActionBarOverflowOrOptionsMenu(InstrumentationRegistry.getTargetContext());
//
//        } catch (Exception e) {
//        }  // clicks on need help, loads intented help activity
//         onView(anyOf(withText("Beacon"), withId(R.id.Beacon))).perform(click());
//
//        pressBack();
//        onData(is(instanceOf(UserActivity.class)));
//    }
//}

package com.example.hertzfastlane;

import android.content.ComponentName;
import android.content.Intent;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.action.ViewActions;
import android.support.test.espresso.intent.rule.IntentsTestRule;
import android.util.Log;

import org.junit.Rule;
import org.junit.Test;

import static android.support.test.InstrumentationRegistry.getTargetContext;
import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.intent.Intents.intended;
import static android.support.test.espresso.intent.matcher.IntentMatchers.hasComponent;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.anyOf;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.core.Is.is;

/**
 * Created by stevenjoy on 3/13/17.
 */

public class BeaconsBackButton {

    @Rule
    public IntentsTestRule activityRule = new IntentsTestRule<>(
            UserActivity.class, true,    // initialTouchMode
            false);  // launchActivity. False to set intent.

    @Test  // tests the Beacons class onBackPressed Method
    public void testBeaconsButton() throws Exception {

//        onView(withId(R.id.et_Username)).perform(typeText("dpike15")).perform(ViewActions.closeSoftKeyboard());
//        onView(withId(R.id.et_Password)).perform(typeText("test")).perform(ViewActions.closeSoftKeyboard());
//        onView(withId(R.id.b_Login)).perform(click());


        Member member = new Member();
        member.setLoyaltyPoints(275);
        member.setFirst_NM("derek");
        Log.d("name",member.getFirst_NM());

        Intent user = new Intent();
        user.setAction(Intent.ACTION_SEND);
        user.setType("text/plain");

        user.putExtra("member", member);
        activityRule.launchActivity(user);



        try { // activates menu actions bar
            openActionBarOverflowOrOptionsMenu(InstrumentationRegistry.getTargetContext());

        } catch (Exception e) {
        }  // clicks on need help, loads intented help activity
        onView(anyOf(withText("Beacon"), withId(R.id.Beacon))).perform(click());

        pressBack();
        onData(is(instanceOf(UserActivity.class)));
    }
}